--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,14 +6,11 @@ on:
       version:
         description: "Version to build (e.g., 1.8.0)"
         required: true
-      build_type:
-        description: "Build type"
+      production:
+        description: "Is this a production build?"
         required: true
-        default: "Development"
-        type: choice
-        options:
-          - Development
-          - Production
+        default: false
+        type: boolean
 
 jobs:
   build:
@@ -36,25 +33,29 @@ jobs:
         id: tags
         run: |
           VERSION=${{ github.event.inputs.version }}
-          BUILD_TYPE=${{ github.event.inputs.build_type }}
+          PROD=${{ github.event.inputs.production }}
 
           TAGS=()
           ALL_TAGS=()
 
-          if [ "$BUILD_TYPE" = "Production" ]; then
+          if [ "$PROD" = "true" ]; then
+            # Production build → push release + latest to both GHCR and Docker Hub
             TAGS+=("release-$VERSION" "latest")
             for tag in "${TAGS[@]}"; do
               ALL_TAGS+=("ghcr.io/lukegus/termix:$tag")
               ALL_TAGS+=("docker.io/bugattiguy527/termix:$tag")
             done
           else
+            # Dev build → push only dev-x.x.x to GHCR
             TAGS+=("dev-$VERSION")
             for tag in "${TAGS[@]}"; do
               ALL_TAGS+=("ghcr.io/lukegus/termix:$tag")
             done
           fi
 
-          echo "ALL_TAGS=$(printf '%s\n' "${ALL_TAGS[@]}")" >> $GITHUB_ENV
+          echo "ALL_TAGS=${ALL_TAGS[*]}" >> $GITHUB_ENV
+          echo "All tags to build:"
+          printf '%s\n' "${ALL_TAGS[@]}"
 
       - name: Login to GHCR
         uses: docker/login-action@v3
@@ -64,7 +65,7 @@ jobs:
           password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Login to Docker Hub (prod only)
-        if: ${{ github.event.inputs.build_type == 'Production' }}
+        if: ${{ github.event.inputs.production == 'true' }}
         uses: docker/login-action@v3
         with:
           username: bugattiguy527
