--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -180,8 +180,8 @@ jobs:
           cd release
 
           # Rename x64 tar.gz if it exists
-          if [ -f "termix-${VERSION}-x64.tar.gz" ]; then
-            mv "termix-${VERSION}-x64.tar.gz" "termix_linux_x64_${VERSION}_portable.tar.gz"
+          if [ -f "termix-${VERSION}.tar.gz" ]; then
+            mv "termix-${VERSION}.tar.gz" "termix_linux_x64_${VERSION}_portable.tar.gz"
             echo "Renamed x64 tar.gz"
           fi
 
