--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,11 +6,14 @@ on:
       version:
         description: "Version to build (e.g., 1.8.0)"
         required: true
-      production:
-        description: "Is this a production build?"
+      build_type:
+        description: "Build type"
         required: true
-        default: false
-        type: boolean
+        default: "Development"
+        type: choice
+        options:
+          - Development
+          - Production
 
 jobs:
   build:
@@ -33,12 +36,12 @@ jobs:
         id: tags
         run: |
           VERSION=${{ github.event.inputs.version }}
-          PROD=${{ github.event.inputs.production }}
+          BUILD_TYPE=${{ github.event.inputs.build_type }}
 
           TAGS=()
           ALL_TAGS=()
 
-          if [ "$PROD" = "true" ]; then
+          if [ "$BUILD_TYPE" = "Production" ]; then
             # Production build → push release + latest to both GHCR and Docker Hub
             TAGS+=("release-$VERSION" "latest")
             for tag in "${TAGS[@]}"; do
@@ -65,7 +68,7 @@ jobs:
           password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Login to Docker Hub (prod only)
-        if: ${{ github.event.inputs.production == 'true' }}
+        if: ${{ github.event.inputs.build_type == 'Production' }}
         uses: docker/login-action@v3
         with:
           username: bugattiguy527
