fix: Issue with electron not displaying site

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -23,13 +23,15 @@ http {
         listen ${PORT};
         server_name localhost;
 
-        add_header X-Frame-Options DENY always;
+        # X-Frame-Options removed to allow Electron iframe embedding
+        # add_header X-Frame-Options DENY always;
         add_header X-Content-Type-Options nosniff always;
         add_header X-XSS-Protection "1; mode=block" always;
 
         location / {
             root /usr/share/nginx/html;
             index index.html index.htm;
+            try_files $uri $uri/ /index.html;
         }
 
         location ~* \.map$ {
