--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -54,7 +54,7 @@ jobs:
             done
           fi
 
-          printf '%s\n' "${ALL_TAGS[@]}"
+          echo "ALL_TAGS=$(printf '%s\n' "${ALL_TAGS[@]}")" >> $GITHUB_ENV
 
       - name: Login to GHCR
         uses: docker/login-action@v3
