--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -78,62 +78,60 @@ jobs:
 
       - name: Upload Windows x64 NSIS Installer
         uses: actions/upload-artifact@v4
-        if: hashFiles('release/*_x64_*_nsis.exe') != '' && github.event.inputs.artifact_destination != 'none'
+        if: hashFiles('release/termix_windows_x64_nsis.exe') != '' && github.event.inputs.artifact_destination != 'none'
         with:
           name: termix_windows_x64_nsis
-          path: release/*_x64_*_nsis.exe
+          path: release/termix_windows_x64_nsis.exe
           retention-days: 30
 
       - name: Upload Windows ia32 NSIS Installer
         uses: actions/upload-artifact@v4
-        if: hashFiles('release/*_ia32_*_nsis.exe') != '' && github.event.inputs.artifact_destination != 'none'
+        if: hashFiles('release/termix_windows_ia32_nsis.exe') != '' && github.event.inputs.artifact_destination != 'none'
         with:
           name: termix_windows_ia32_nsis
-          path: release/*_ia32_*_nsis.exe
+          path: release/termix_windows_ia32_nsis.exe
           retention-days: 30
 
       - name: Upload Windows x64 MSI Installer
         uses: actions/upload-artifact@v4
-        if: hashFiles('release/*_x64_*_msi.msi') != '' && github.event.inputs.artifact_destination != 'none'
+        if: hashFiles('release/termix_windows_x64_msi.msi') != '' && github.event.inputs.artifact_destination != 'none'
         with:
           name: termix_windows_x64_msi
-          path: release/*_x64_*_msi.msi
+          path: release/termix_windows_x64_msi.msi
           retention-days: 30
 
       - name: Upload Windows ia32 MSI Installer
         uses: actions/upload-artifact@v4
-        if: hashFiles('release/*_ia32_*_msi.msi') != '' && github.event.inputs.artifact_destination != 'none'
+        if: hashFiles('release/termix_windows_ia32_msi.msi') != '' && github.event.inputs.artifact_destination != 'none'
         with:
           name: termix_windows_ia32_msi
-          path: release/*_ia32_*_msi.msi
+          path: release/termix_windows_ia32_msi.msi
           retention-days: 30
 
       - name: Create Windows x64 Portable zip
         if: hashFiles('release/win-unpacked/*') != ''
         run: |
-          $VERSION = "${{ steps.package-version.outputs.version }}"
-          Compress-Archive -Path "release\win-unpacked\*" -DestinationPath "termix_windows_x64_${VERSION}_portable.zip"
+          Compress-Archive -Path "release\win-unpacked\*" -DestinationPath "termix_windows_x64_portable.zip"
 
       - name: Create Windows ia32 Portable zip
         if: hashFiles('release/win-ia32-unpacked/*') != ''
         run: |
-          $VERSION = "${{ steps.package-version.outputs.version }}"
-          Compress-Archive -Path "release\win-ia32-unpacked\*" -DestinationPath "termix_windows_ia32_${VERSION}_portable.zip"
+          Compress-Archive -Path "release\win-ia32-unpacked\*" -DestinationPath "termix_windows_ia32_portable.zip"
 
       - name: Upload Windows x64 Portable
         uses: actions/upload-artifact@v4
-        if: hashFiles('termix_windows_x64_*_portable.zip') != '' && github.event.inputs.artifact_destination != 'none'
+        if: hashFiles('termix_windows_x64_portable.zip') != '' && github.event.inputs.artifact_destination != 'none'
         with:
           name: termix_windows_x64_portable
-          path: termix_windows_x64_*_portable.zip
+          path: termix_windows_x64_portable.zip
           retention-days: 30
 
       - name: Upload Windows ia32 Portable
         uses: actions/upload-artifact@v4
-        if: hashFiles('termix_windows_ia32_*_portable.zip') != '' && github.event.inputs.artifact_destination != 'none'
+        if: hashFiles('termix_windows_ia32_portable.zip') != '' && github.event.inputs.artifact_destination != 'none'
         with:
           name: termix_windows_ia32_portable
-          path: termix_windows_ia32_*_portable.zip
+          path: termix_windows_ia32_portable.zip
           retention-days: 30
 
   build-linux:
@@ -181,24 +179,16 @@ jobs:
           VERSION=$(node -p "require('./package.json').version")
           cd release
 
-          if [ -f "termix_linux_x86_64_${VERSION}_appimage.AppImage" ]; then
-            mv "termix_linux_x86_64_${VERSION}_appimage.AppImage" "termix_linux_x64_${VERSION}_appimage.AppImage"
-          fi
-
-          if [ -f "termix_linux_amd64_${VERSION}_deb.deb" ]; then
-            mv "termix_linux_amd64_${VERSION}_deb.deb" "termix_linux_x64_${VERSION}_deb.deb"
-          fi
-
           if [ -f "termix-${VERSION}.tar.gz" ]; then
-            mv "termix-${VERSION}.tar.gz" "termix_linux_x64_${VERSION}_portable.tar.gz"
+            mv "termix-${VERSION}.tar.gz" "termix_linux_x64_portable.tar.gz"
           fi
 
           if [ -f "termix-${VERSION}-arm64.tar.gz" ]; then
-            mv "termix-${VERSION}-arm64.tar.gz" "termix_linux_arm64_${VERSION}_portable.tar.gz"
+            mv "termix-${VERSION}-arm64.tar.gz" "termix_linux_arm64_portable.tar.gz"
           fi
 
           if [ -f "termix-${VERSION}-armv7l.tar.gz" ]; then
-            mv "termix-${VERSION}-armv7l.tar.gz" "termix_linux_armv7l_${VERSION}_portable.tar.gz"
+            mv "termix-${VERSION}-armv7l.tar.gz" "termix_linux_armv7l_portable.tar.gz"
           fi
 
           cd ..
@@ -209,66 +199,66 @@ jobs:
 
       - name: Upload Linux x64 AppImage
         uses: actions/upload-artifact@v4
-        if: hashFiles('release/*_x64_*_appimage.AppImage') != '' && github.event.inputs.artifact_destination != 'none'
+        if: hashFiles('release/termix_linux_x64_appimage.AppImage') != '' && github.event.inputs.artifact_destination != 'none'
         with:
           name: termix_linux_x64_appimage
-          path: release/*_x64_*_appimage.AppImage
+          path: release/termix_linux_x64_appimage.AppImage
           retention-days: 30
 
       - name: Upload Linux arm64 AppImage
         uses: actions/upload-artifact@v4
-        if: hashFiles('release/*_arm64_*_appimage.AppImage') != '' && github.event.inputs.artifact_destination != 'none'
+        if: hashFiles('release/termix_linux_arm64_appimage.AppImage') != '' && github.event.inputs.artifact_destination != 'none'
         with:
           name: termix_linux_arm64_appimage
-          path: release/*_arm64_*_appimage.AppImage
+          path: release/termix_linux_arm64_appimage.AppImage
           retention-days: 30
 
       - name: Upload Linux x64 DEB
         uses: actions/upload-artifact@v4
-        if: hashFiles('release/*_x64_*_deb.deb') != '' && github.event.inputs.artifact_destination != 'none'
+        if: hashFiles('release/termix_linux_x64_deb.deb') != '' && github.event.inputs.artifact_destination != 'none'
         with:
           name: termix_linux_x64_deb
-          path: release/*_x64_*_deb.deb
+          path: release/termix_linux_x64_deb.deb
           retention-days: 30
 
       - name: Upload Linux arm64 DEB
         uses: actions/upload-artifact@v4
-        if: hashFiles('release/*_arm64_*_deb.deb') != '' && github.event.inputs.artifact_destination != 'none'
+        if: hashFiles('release/termix_linux_arm64_deb.deb') != '' && github.event.inputs.artifact_destination != 'none'
         with:
           name: termix_linux_arm64_deb
-          path: release/*_arm64_*_deb.deb
+          path: release/termix_linux_arm64_deb.deb
           retention-days: 30
 
       - name: Upload Linux armv7l DEB
         uses: actions/upload-artifact@v4
-        if: hashFiles('release/*_armv7l_*_deb.deb') != '' && github.event.inputs.artifact_destination != 'none'
+        if: hashFiles('release/termix_linux_armv7l_deb.deb') != '' && github.event.inputs.artifact_destination != 'none'
         with:
           name: termix_linux_armv7l_deb
-          path: release/*_armv7l_*_deb.deb
+          path: release/termix_linux_armv7l_deb.deb
           retention-days: 30
 
       - name: Upload Linux x64 tar.gz
         uses: actions/upload-artifact@v4
-        if: hashFiles('release/*_x64_*_portable.tar.gz') != '' && github.event.inputs.artifact_destination != 'none'
+        if: hashFiles('release/termix_linux_x64_portable.tar.gz') != '' && github.event.inputs.artifact_destination != 'none'
         with:
           name: termix_linux_x64_portable
-          path: release/*_x64_*_portable.tar.gz
+          path: release/termix_linux_x64_portable.tar.gz
           retention-days: 30
 
       - name: Upload Linux arm64 tar.gz
         uses: actions/upload-artifact@v4
-        if: hashFiles('release/*_arm64_*_portable.tar.gz') != '' && github.event.inputs.artifact_destination != 'none'
+        if: hashFiles('release/termix_linux_arm64_portable.tar.gz') != '' && github.event.inputs.artifact_destination != 'none'
         with:
           name: termix_linux_arm64_portable
-          path: release/*_arm64_*_portable.tar.gz
+          path: release/termix_linux_arm64_portable.tar.gz
           retention-days: 30
 
       - name: Upload Linux armv7l tar.gz
         uses: actions/upload-artifact@v4
-        if: hashFiles('release/*_armv7l_*_portable.tar.gz') != '' && github.event.inputs.artifact_destination != 'none'
+        if: hashFiles('release/termix_linux_armv7l_portable.tar.gz') != '' && github.event.inputs.artifact_destination != 'none'
         with:
           name: termix_linux_armv7l_portable
-          path: release/*_armv7l_*_portable.tar.gz
+          path: release/termix_linux_armv7l_portable.tar.gz
           retention-days: 30
 
   build-macos:
@@ -420,36 +410,36 @@ jobs:
           ls -R release/ || echo "Release directory not found"
 
       - name: Upload macOS MAS PKG
-        if: steps.check_certs.outputs.has_certs == 'true' && hashFiles('release/*_*_*_mas.pkg') != '' && (github.event.inputs.artifact_destination == 'file' || github.event.inputs.artifact_destination == 'release' || github.event.inputs.artifact_destination == 'submit')
+        if: steps.check_certs.outputs.has_certs == 'true' && hashFiles('release/termix_macos_universal_mas.pkg') != '' && (github.event.inputs.artifact_destination == 'file' || github.event.inputs.artifact_destination == 'release' || github.event.inputs.artifact_destination == 'submit')
         uses: actions/upload-artifact@v4
         with:
           name: termix_macos_mas
-          path: release/*_*_*_mas.pkg
+          path: release/termix_macos_universal_mas.pkg
           retention-days: 30
           if-no-files-found: warn
 
       - name: Upload macOS Universal DMG
         uses: actions/upload-artifact@v4
-        if: hashFiles('release/*_universal_*_dmg.dmg') != '' && github.event.inputs.artifact_destination != 'none'
+        if: hashFiles('release/termix_macos_universal_dmg.dmg') != '' && github.event.inputs.artifact_destination != 'none'
         with:
           name: termix_macos_universal_dmg
-          path: release/*_universal_*_dmg.dmg
+          path: release/termix_macos_universal_dmg.dmg
           retention-days: 30
 
       - name: Upload macOS x64 DMG
         uses: actions/upload-artifact@v4
-        if: hashFiles('release/*_x64_*_dmg.dmg') != '' && github.event.inputs.artifact_destination != 'none'
+        if: hashFiles('release/termix_macos_x64_dmg.dmg') != '' && github.event.inputs.artifact_destination != 'none'
         with:
           name: termix_macos_x64_dmg
-          path: release/*_x64_*_dmg.dmg
+          path: release/termix_macos_x64_dmg.dmg
           retention-days: 30
 
       - name: Upload macOS arm64 DMG
         uses: actions/upload-artifact@v4
-        if: hashFiles('release/*_arm64_*_dmg.dmg') != '' && github.event.inputs.artifact_destination != 'none'
+        if: hashFiles('release/termix_macos_arm64_dmg.dmg') != '' && github.event.inputs.artifact_destination != 'none'
         with:
           name: termix_macos_arm64_dmg
-          path: release/*_arm64_*_dmg.dmg
+          path: release/termix_macos_arm64_dmg.dmg
           retention-days: 30
 
       - name: Check for App Store Connect API credentials
