--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -190,6 +190,10 @@ jobs:
           if [ -f "termix-${VERSION}-armv7l.tar.gz" ]; then
             mv "termix-${VERSION}-armv7l.tar.gz" "termix_linux_armv7l_portable.tar.gz"
           fi
+          # Rename Debian amd64 to x64 for consistency
+          if [ -f "termix_linux_amd64_deb.deb" ]; then
+            mv "termix_linux_amd64_deb.deb" "termix_linux_x64_deb.deb"
+          fi
 
           cd ..
 
@@ -211,6 +215,14 @@ jobs:
         with:
           name: termix_linux_arm64_appimage
           path: release/termix_linux_arm64_appimage.AppImage
+          retention-days: 30
+
+      - name: Upload Linux armv7l AppImage
+        uses: actions/upload-artifact@v4
+        if: hashFiles('release/termix_linux_armv7l_appimage.AppImage') != '' && github.event.inputs.artifact_destination != 'none'
+        with:
+          name: termix_linux_armv7l_appimage
+          path: release/termix_linux_armv7l_appimage.AppImage
           retention-days: 30
 
       - name: Upload Linux x64 DEB
@@ -413,7 +425,7 @@ jobs:
         if: steps.check_certs.outputs.has_certs == 'true' && hashFiles('release/termix_macos_universal_mas.pkg') != '' && (github.event.inputs.artifact_destination == 'file' || github.event.inputs.artifact_destination == 'release' || github.event.inputs.artifact_destination == 'submit')
         uses: actions/upload-artifact@v4
         with:
-          name: termix_macos_mas
+          name: termix_macos_universal_mas
           path: release/termix_macos_universal_mas.pkg
           retention-days: 30
           if-no-files-found: warn
